--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <li> Animal Based Product</li>
               <li>Shortage of important things for animal</li>
               <li>Endangered Species Solution</li>
-              <li> Animal trafficing</li>
+              <li> Animal trafficking</li>
             </ol>
             
           </div>
